platform/k8s/istio/istio-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio
  labels:
    name: istio
    istio-injection: enabled
