platform/k8s/istio/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: live
  labels:
    app: live
    service: live
spec:
  ports:
  - name: remoting
    port: 2552
  - name: management
    port: 8558
  - name: grpc
    port: 8080
  - name: ws
    port: 9090
  selector:
    app: live
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: live
  labels:
    app: live
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: live
      version: v1
  template:
    metadata:
      labels:
        app: live
        version: v1
      annotations:
        traffic.sidecar.istio.io/includeInboundPorts: "8080,9090"
        traffic.sidecar.istio.io/excludeOutboundPorts: "2552,8558"
    spec:
      containers:
        - name: live
          image: live:0.1
          imagePullPolicy: Never
          ports:
            - name: remoting
              containerPort: 2552
            - name: management
              containerPort: 8558
            - name: grpc
              containerPort: 8080
            - name: ws
              containerPort: 9090
          livenessProbe:
            httpGet:
              path: /alive
              port: management
            initialDelaySeconds: 15
          readinessProbe:
            httpGet:
              path: /ready
              port: management
            initialDelaySeconds: 15
