platform/k8s/istio/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-live-gateway
  namespace: istio
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-live-virtual-service
  namespace: istio
spec:
  hosts:
    - "*"
  gateways:
  - istio-live-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            port:
              number: 8080
            host: live
      corsPolicy:
        allowOrigin:
          - foo.com
        allowMethods:
          - POST
          - GET
        allowCredentials: false
        allowHeaders:
          - X-Foo-Bar
        maxAge: "24h"
